--- a/style.css
+++ b/style.css
@@ -11,16 +11,17 @@ h1 {
   text-decoration: overline;
 }
 
-h2 {   
- text-align: center;
- font-size: 150%
+h2 {
+  text-align: center;
+  font-size: 150%;
 }
 
 h3 {
-    text-decoration: overline;
-   text-align: center;
- font-size: 200%
+  text-decoration: overline;
+  text-align: center;
+  font-size: 200%;
 }
+
 div.a {
   font-size: large;
 }
